<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/titreV_cd"
        android:text="@string/titre_cd"
        android:layout_weight="0.11"
        android:textSize="24sp"
        android:textColor="@color/colorTitre"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:id="@+id/imageView3"
        android:layout_weight="0.09" />

    <TextView
        android:text="@string/content_cd_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cd_content_1"
        android:layout_weight="0.11"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="98dp">

        <TextView
            android:text="@string/stitre_1"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:id="@+id/stitre1"
            android:textSize="17sp"
            android:textColor="@color/colorTitre" />

        <TextView
            android:text="@string/content_cd_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cd_content_2"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="178dp">

        <TextView
            android:text="@string/stitre_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stitre2"
            android:layout_weight="1"
            android:textColor="@color/colorTitre"
            android:textSize="17sp" />

        <TextView
            android:text="@string/content_cd_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cd_content_3"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
    </LinearLayout>


</LinearLayout>