<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:id="@+id/titre_cn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:text="@string/titre_cn"
        android:textColor="@color/colorTitre" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:id="@+id/imageView6" />

    <TextView
        android:id="@+id/content_cn_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/content_cn_1"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:paddingBottom="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="109dp">

        <TextView
            android:text="@string/stitre_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stitre_cn_1"
            android:layout_weight="1"
            android:textSize="17sp"
            android:textStyle="normal|bold"
            android:textColor="@color/colorTitre" />

        <TextView
            android:id="@+id/content_cn_2"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/content_cn_2"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/stitre_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textSize="17sp"
            android:textColor="@color/colorTitre" />

        <TextView
            android:id="@+id/content_cn_3"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/content_cn_3"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@android:color/black" />
    </LinearLayout>


</LinearLayout>