<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titre"
        android:text="@string/titre_reathletisation"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/colorTitre"
        android:textStyle="normal|bold"
        android:fontFamily="sans-serif" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.74"
        android:id="@+id/imageView2" />

    <TextView
        android:text="@string/content_rea_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content_rea_1"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@android:color/black"
        android:paddingBottom="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="99dp">

        <TextView
            android:text="@string/stitre_1"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:id="@+id/stitre1_rea"
            android:textSize="17sp"
            android:textStyle="normal|bold"
            android:textColor="@color/colorTitre" />

        <TextView
            android:text="@string/content_rea_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/content_rea_2"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="101dp">

        <TextView
            android:text="@string/stitre_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stitre_rea_2"
            android:layout_weight="0.24"
            android:textSize="17sp"
            android:textColor="@color/colorTitre"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/content_rea_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/content_rea_3"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>